tests/snapshots/integration_test__log_data@a0dbd070e263525818c12e01156e2cae.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/auparse/test4.log:3"
expression: result
info: "type=CWD msg=audit(1655465398.534:25618): cwd=\"/usr/src/RPM/BUILD/zlib-1.2.11-alt1\""
---
{
  "record_type": "CWD",
  "timestamp": 1655465398534,
  "id": 25618,
  "fields": {
    "cwd": "/usr/src/RPM/BUILD/zlib-1.2.11-alt1"
  }
}
