tests/snapshots/integration_test__log_data@a1a947e68ee3ada58154ee3839856679-2.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/auparse/test4.log:10"
expression: result
info: "type=CWD msg=audit(1655465404.819:27091): cwd=\"/usr/src/RPM/BUILD/zlib-1.2.11-alt1/contrib/minizip\""
---
{
  "record_type": "CWD",
  "timestamp": 1655465404819,
  "id": 27091,
  "fields": {
    "cwd": "/usr/src/RPM/BUILD/zlib-1.2.11-alt1/contrib/minizip"
  }
}
