tests/snapshots/integration_test__log_data@a32cc02dbdba8b16be563dfa7060e011.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/linux-audit-parser-rs/line-broken-subj2.log:1"
expression: result
info: "type=SYSCALL msg=audit(1634623555.431:13835339): arch=c000003e syscall=49 success=yes exit=0 a0=15 a1=55c5e046e264 a2=1c a3=7ffc8fab77ec items=0 ppid=1899774 pid=1899780 auid=4294967295 uid=0 gid=0 euid=0 suid=0 fsuid=0 egid=0 sgid=0 fsgid=0 tty=(none) ses=4294967295 comm=\"ntpd\" exe=\"/usr/sbin/ntpd\" subj==/usr/sbin/ntpd (enforce) key=(null)"
---
{
  "Err": {
    "Parser": {
      "Parse": "error Eof at:  (enforce) key=(null)"
    }
  }
}
