tests/snapshots/integration_test__log_data@a542a6be1ce2a9bd536018854ccc0674.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/auparse/test2.log:1"
expression: result
info: "type=AVC msg=audit(1170021493.977:283): avc:  denied  { read } for  pid=13010 comm=\"pickup\" name=\"maildrop\" dev=hda7 ino=14911367 scontext=system_u:system_r:postfix_pickup_t:s0 tcontext=system_u:object_r:postfix_spool_maildrop_t:s0 tclass=dir"
---
{
  "Err": {
    "Parser": {
      "Parse": "error Char at:   denied  { read } for  pid=13010 comm=\"pickup\" name=\"maildrop\" dev=hda7 ino=14911367 scontext=system_u:system_r:postfix_pickup_t:s0 tcontext=system_u:object_r:postfix_spool_maildrop_t:s0 tclass=dir"
    }
  }
}
