tests/snapshots/integration_test__log_data@a7b7dedf221fe7d82730811fb01f3bba.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/test3.log:13"
expression: result
info: "node=auditdtest.a1959.org type=PROCTITLE msg=audit(1451781471.394:194438): proctitle=\"bash\""
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1451781471394,
  "id": 194438,
  "node": "auditdtest.a1959.org",
  "fields": {
    "proctitle": "bash"
  }
}
